--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "React"
   ],
   "author": "Kara Bayse",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2"
+  }
 }
